# news-feed

./: .gitignore  README.md  mypy.ini  pyproject.toml
news_feed/: constants.py  feed_reader.py  main.py
news_feed/api/: main.py
news_feed/feed_fetcher/: fetcher.py
news_feed/feed_reader/: reader.py
news_feed/resources/: news_feed_list_countries.json
news_feed/resources/RSS_files/Belgium/: De_Tijd.xml  Gazet_Van_Antwerpen.xml  HLN.xml  Het_Belang_Van_Limburg.xml  LeVif.be.xml  Nieuwsblad.xml  RTBF.xml
resources/RRS_files/Belgium/: De_Morgen.xml  De_Redactie.xml  De_Standaard.xml  Knack.be.xml  Le_Soir.xml  RTL.be.xml  Sporza.xml  Sudinfo.be.xml
tests/feed_fetcher/: test_fetcher.py
tests/feed_reader/: test_reader.py
tests/resources/rss_articles/: bbc.world.article.json  en.rss.acrticles.article.json
tests/resources/rss_sources/: bbc.world.rss.xml  en.rss.articles.xml
