[tool.poetry]
name = "news-feed"
version = "0.1.0"
description = ""
authors = ["JelsB <boulangier.jels@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
feedparser = "^6.0.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
pylint = "^2.7.1"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-api = "news_feed.api.main:start"
